# terrasynth

./: .gitignore  report.txt
assets/: terrain.pgm  test.pgm  test2.pgm
assets/glsl/: terrain-normals.vert  terrain.frag
assets/glsl/normals/: terrain.frag
broken-iteration/: demo.hs
c/: Makefile  gradient.cc  main.cc
c-no-tables/: gradient  gradient.cc
cmake/: CMakeLists.txt
cuda/: Makefile  gradient.cu  gradient.h
cuda-segfault/: demo.hs  hterra-demo.cabal
docs/: mkdocs.sh
hterra/: hterra.cabal
hterra-demo/: Main.hs  demo.hs  hterra-demo.cabal
hterra-demo/prof/01-initial-build/: Main.hs  hterra-demo.hp  hterra-demo.prof  hterra-demo.ps
hterra-demo/prof/02-with-c-file-io/: Image.hsc  hterra-demo.hp  hterra-demo.prof  hterra-demo.ps
hterra-demo/prof/03-with-pixels/: hterra-demo.hp  hterra-demo.prof  hterra-demo.ps
hterra/Graphics/HTerra/: Image.hs  Image.hsc  Interp.hs  Noise.hs  Test.hs
hterra/Graphics/HTerra/Image/: IO.hsc  cimage.c
nvprof/: accelerate  cuda  fbm-accelerate-n4  fbm-accelerate-n8
nvprof/old/: fbm-cuda-n8
slow-iteration/: demo.hs  hterra-demo  hterra-demo.prof
src/: Heightmap.cc.normals  HmApp.cc  HmApp.h  TerraGen.h  main.cc
terraview/assets/: terrain-h-1-2.pgm  terrain-h-1.pgm  terrain-h0.pgm  terrain-h1.pgm  terrain-h12.pgm
terraview/assets/glsl/: terrain.frag  terrain.vert
terraview/cmake/: CMakeLists.txt
terraview/src/: HeightMap.cc  HeightMap.h  HmApp.cc  HmApp.h  main.cc
uml/: design.txt  mkdia.sh
